Update font size, fix image overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: white;
+  font-size: 62.5%;
 }
 
 * {
@@ -10,9 +11,9 @@ body {
 }
 
 main {
-  width: 60%;
+  width: 70vh;
   margin: auto;
-  box-shadow: 0px 0px 100px 0px grey;
+  box-shadow: 0px 0px 100px grey;
   padding: 3em;
   margin-top: 1em;
   margin-bottom: 1em;
@@ -20,6 +21,7 @@ main {
 
 .header {
   display: flex;
+  justify-content: space-between;
 }
 
 #name {
@@ -37,10 +39,9 @@ main {
 }
 
 .info-item {
-  margin-top: 5px;
+  margin-top: 0.5rem;
   margin-right: 4em;
-  list-style-type: none;
-  line-height: 5px;
+  line-height: 0.5rem;
 }
 
 figure {
@@ -48,9 +49,10 @@ figure {
 }
 
 img {
-  height: 200px;
+  width: 10rem;
+  max-width: 100%;
+  height: auto;
   border-radius: 100%;
-  float: right;
 }
 
 a {
@@ -133,7 +135,8 @@ hr {
   margin-left: auto;
   margin-top: 0.4em;
   margin-bottom: 0.4em;
-  width: 40%;
+  width: 25%;
+  height: 5px;
   border-radius: 1em;
   display: flex;
 }
